Fix Chiseled Bookshelfs and JEI integration